# fluent-reader-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  api.yml  commands.txt  database.sql  docker-compose.yml  notes.txt  package.json
src/: app_config.rs  auth.rs  db.rs  handlers.rs  lang.rs  main.rs  models.rs  response.rs  util.rs
