[package]
name = "fluent-reader-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1.0.118"
dotenv = "0.15.0"
config = "0.10.1"
tokio-pg-mapper = "=0.1.8"
tokio-pg-mapper-derive = "=0.1.5"
deadpool-postgres = "=0.5.6"
tokio-postgres = "=0.5.5"
chrono = "0.4"

rust-argon2 = "0.8"
jsonwebtoken = "7.2.0"
